Fix m54 build caused by bad merge.

BUG=649069

(cherry picked from commit 5f21d8f4e4a64fbd54c76b571652d9d014ad3017)

Review URL: https://codereview.chromium.org/2361533002 .

Cr-Commit-Position: refs/branch-heads/2840@{#468}
Cr-Branched-From: 1ae106dbab4bddd85132d5b75c670794311f4c57-refs/heads/master@{#414607}